// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the progress bar matches the snapshot 1`] = `
<progress
  aria-hidden="true"
  className="sc-bdVaJa hxeGYw"
  max={1}
  value={0}
/>
`;

exports[`the progress bar with custom color matches the snapshot 1`] = `
<progress
  aria-hidden="true"
  className="sc-bdVaJa gfyPtk"
  max={100}
  value={50}
/>
`;

exports[`the progress bar with progress matches the snapshot 1`] = `
<progress
  aria-hidden="true"
  className="sc-bdVaJa hxeGYw"
  max={100}
  value={50}
/>
`;
